# SoundBert

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  db_init.sql  docker-compose.yaml  docker-compose.yml.sample  example_settings.toml  launcher.py  migration_1.sql  requirements.txt  setup.py  soundbert.py
backend/: .gitignore  pyproject.toml
backend/soundbert_backend/: __main__.py  main.py  schema.py  settings.py  storage.py
backend/soundbert_backend/db/: base.py  engine.py  models.py
backend/soundbert_backend/routes/: guilds.py  playbacks.py  sounds.py
cogs/: info.py  settings.py  soundboard.py
cogs/utils/: converters.py  reactions.py
migrations/: 0000_init.sql  0001_add_upload_source.sql  0002_add_upload_time.sql  0003_add_clips.sql  0005_fix_rename.sql
soundbert/: __init__.py  __main__.py  alembic.ini  cli.py  config.py  database.py  soundbert.py
soundbert/alembic/: env.py
soundbert/alembic/versions/: 03c991204ea9_init.py
soundbert/cogs/: admin.py  clipboard.py  info.py  settings.py  soundboard.py
soundbert/cogs/soundboard/: __init__.py  checks.py  converters.py  exceptions.py  soundboard.py
soundbert/cogs/utils/: humantime.py  paginator.py  pluralize.py  reactions.py
soundbert/database/: tables.py
soundbert/migrations/: v0001_add_length.sql  v0002_calculate_length.py  v0003_length_nonnull.sql  v0004_drop_clipboard.sql  v0005_add_permissions.sql  v0006_sound_ids.sql  v0007_sound_names.sql
soundbot/: __init__.py  __main__.py  soundbot.py
